[gd_scene load_steps=10 format=3 uid="uid://fqxnbyrmfge3"]

[ext_resource type="PackedScene" uid="uid://db3hxdi0ur4ph" path="res://objects/banner_01.glb" id="1_2iyem"]
[ext_resource type="Script" uid="uid://b7k0o4uq0v03d" path="res://banner.gd" id="1_ync5d"]
[ext_resource type="PackedScene" uid="uid://bpk2y18maw5pt" path="res://objects/banner_02.glb" id="3_05pf3"]
[ext_resource type="PackedScene" uid="uid://bvur6ijt34khm" path="res://objects/banner_03.glb" id="5_uuosl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v1jxp"]

[sub_resource type="PlaneMesh" id="PlaneMesh_v1jxp"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_v1jxp")
size = Vector2(0.5, 0.5)

[sub_resource type="PlaneMesh" id="PlaneMesh_05pf3"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_v1jxp")
size = Vector2(0.5, 0.5)

[sub_resource type="PlaneMesh" id="PlaneMesh_ujg7t"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_v1jxp")
size = Vector2(0.5, 0.5)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2iyem"]
height = 1.04297
radius = 0.293457

[node name="Banner" type="Node3D"]
script = ExtResource("1_ync5d")

[node name="Banner01" type="Node3D" parent="."]

[node name="banner_01" parent="Banner01" instance=ExtResource("1_2iyem")]

[node name="banner_plane_01" type="MeshInstance3D" parent="Banner01"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.783249, -0.621709, 0, 0.621709, 0.783249, 0, 0.866781, -0.000502497)
mesh = SubResource("PlaneMesh_v1jxp")
skeleton = NodePath("../../Banner02")

[node name="Banner02" type="Node3D" parent="."]
visible = false

[node name="banner_02" parent="Banner02" instance=ExtResource("3_05pf3")]

[node name="banner_plane_02" type="MeshInstance3D" parent="Banner02"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 2.13529, 0.0387122)
mesh = SubResource("PlaneMesh_05pf3")

[node name="Banner03" type="Node3D" parent="."]
visible = false

[node name="banner_03" parent="Banner03" instance=ExtResource("5_uuosl")]

[node name="banner_plane_03" type="MeshInstance3D" parent="Banner03"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.87978, 0.0387122)
mesh = SubResource("PlaneMesh_ujg7t")

[node name="StaticBody3D" type="StaticBody3D" parent="."]
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.514315, 0)
shape = SubResource("CylinderShape3D_2iyem")
